[package]
name = "totalcmd-hrx"
description = "Total Commander HRX packer plugin"
repository = "https://github.com/nabijaczleweli/totalcmd-hrx"
readme = "README.md"
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]


[dependencies]
hrx = "0.1"
libc = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
