[package]
name = "totalcmd-hrx"
description = "Total Commander HRX packer plugin"
repository = "https://github.com/nabijaczleweli/totalcmd-hrx"
readme = "README.md"
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[lib]
crate-type = ["dylib"]


[dependencies]
hrx = "0.1"
libc = "0.2"
wcxhead = "0.1"
num-traits = "0.2"
linked-hash-map = "0.5"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
